Mario e Luigi completati

--- a/12bool.css
+++ b/12bool.css
@@ -1,12 +1,12 @@
-.col-1. {
+.col-1 {
     width: calc(100% / 12)
 }
 
-.col-2. {
+.col-2 {
     width: calc((100% / 12) * 2)
 }
 
-.col-3. {
+.col-3 {
     width: calc((100% / 12) * 3)
 }
 
@@ -88,4 +88,8 @@
 
 .col-offset-11 {
     margin-left: calc((100% / 12) * 11)
+}
+
+div[class*="col-"] {
+    float: left;
 }
