--- a/style.css
+++ b/style.css
@@ -5,9 +5,51 @@
 }
 
 .container {
-    max-width: 1170px;
+    max-width: 300px;
 }
 
 .row {
-    height: 100px;
+    height: 25px;
+}
+
+.red {
+    height: 100%;
+    background-color: #FE0000;
+    border: 1px solid #FE0000;
+}
+
+.brown {
+    height: 100%;
+    background-color: #804616;
+    border: 1px solid #804616;
+}
+
+.white {
+    height: 100%;
+    background-color: #FFAD61;
+    border: 1px solid #FFAD61;
+}
+
+.black {
+    height: 100%;
+    background-color: #000000;
+    border: 1px solid #000000;
+}
+
+.blue {
+    height: 100%;
+    background-color: #3f51b5;
+    border: 1px solid #3f51b5;
+}
+
+.yellow {
+    height: 100%;
+    background-color: #ffeb3c;
+    border: 1px solid #ffeb3c;
+}
+
+.green {
+    height: 100%;
+    background-color:#22B14C;
+    border: 1px solid #22B14C;
 }
